src/objects/sked_Group_Event__c.object
<CustomObject>
    <description>Event that allow multiple Contact/User can join as Attendee</description>
    <fields>
        <fullName>sked_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Group Events</relationshipLabel>
        <relationshipName>sked_Group_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sked_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coordinator</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Group Events</relationshipLabel>
        <relationshipName>sked_Group_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sked_GeoLocation__c</fullName>
        <label>GeoLocation</label>
        <scale>12</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>sked_Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>sked__Region__c</referenceTo>
        <relationshipLabel>Group Events</relationshipLabel>
        <relationshipName>sked_Group_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Group Event</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GE-{000000}</displayFormat>
        <label>Group Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>